# research

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  cspell.json  environment.yml  package-lock.json  package.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml
projects/reading-language-intervention-trial/: README.md
projects/reading-language-intervention-trial/data/: rli-trial-data-variables.csv  rli-trial-data.csv
projects/vocabulary-growth/: README.md
scripts/: format-markdown.mjs
src/: pyproject.toml
src/dotnet/: NuGet.config
src/python/: environment.yml  pyproject.toml  readme.md
src/python/src/dse_research_utils/console/: console.py  format.py  sections.py  styles.py  summary.py  tables.py
src/python/src/dse_research_utils/data/: environment-core.yml
src/python/src/dse_research_utils/environment/: check.py  info.py  setup.py
src/python/src/dse_research_utils/math/: constants.py
src/python/src/dse_research_utils/metadata/: packages.py
src/python/src/dse_research_utils/ml/: cross_validation.py  feature_dependence.py  importance.py  kernels.py  search.py
src/python/src/dse_research_utils/plot/: diagnostics_mcmc.py  distributions.py  gaussian_process.py  graphs.py  grids.py  heatmap.py  io.py  predictive.py  styles.py
src/python/src/dse_research_utils/statistics/: descriptive.py  diagnostics.py  evidence.py  intervals.py  regression.py  transforms.py
src/python/src/dse_research_utils/statistics/models/: data.py  hsgp.py  likelihood.py  pymc_utils.py  reporting.py  sampling.py
src/python/src/dse_research_utils/storage/: __init__.py  azure.py
src/python/tests/: conftest.py  test_data.py  test_descriptive.py  test_diagnostics.py  test_environment_check.py  test_environment_info.py  test_evidence.py  test_hsgp.py  test_intervals.py  test_likelihood.py  test_math_constants.py  test_metadata_packages.py  test_ml.py  test_plot_distributions.py  test_plot_extra.py  test_plot_heatmap.py  test_plot_predictive.py  test_plot_styles.py  test_regression.py  test_reporting.py  test_sampling.py  test_storage_azure.py  test_transforms.py
src/python/tests/console/: conftest.py  test_console.py  test_format.py  test_sections.py  test_summary.py  test_tables.py
