[build-system]
requires = ["hatchling >= 1.28"]
build-backend = "hatchling.build"

[project]
name = "dse-research-utils"
dynamic = ["version"]
description = "Shared library for DSE research projects."
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "preliz",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8"
]

[tool.hatch.version]
path = "src/dse_research_utils/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dse_research_utils"]

[tool.hatch.build.dev-mode]