[build-system]
requires = ["hatchling >= 1.28"]
build-backend = "hatchling.build"

[project]
name = "dse-research-utils"
dynamic = ["version"]
description = "Shared library for DSE research projects."
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "preliz",
    "psutil>=7.2.2",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8"
]

[tool.hatch.version]
path = "src/dse_research_utils/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dse_research_utils"]

[tool.hatch.build.dev-mode]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["dse_research_utils"]