[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "dse-research-utils"
dynamic = ["version"]
description = "Shared library for DSE research projects."
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "arviz-plots>=1.2.0",
    "arviz-stats>=1.2.0",
    "arviz>=1.2.0",
    "azure-identity",
    "azure-storage-blob",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6,<2.5",  # numba 0.65.1 requires numpy <2.5; lift cap when numba supports 2.5
    "pandas>=3.0.3",
    "preliz>=0.27.0",
    "psutil>=7.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6"
]

[project.optional-dependencies]
# Heavyweight / system-binary plotting backends, kept out of the base install so
# every consumer is not forced to carry them. The helpers that need them lazy-import
# and raise a clear error when the extra is absent.
viz = ["seaborn>=0.13"]            # dse_research_utils.plot.grids (histogram grids)
graphs = ["graphviz", "networkx"]  # dse_research_utils.plot.graphs (needs system Graphviz)
notebook = ["ipython"]             # dse_research_utils.plot.io.display_image

[tool.hatch.version]
path = "src/dse_research_utils/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dse_research_utils"]

[tool.hatch.build.dev-mode]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["dse_research_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
